# Pruneau-Renderer

./: .clang-format  .gitattribute  .gitignore  .gitmodules  C:\Dev\Pruneau-Suite\Pruneau-Renderer\ressources\imgui.ini  CMakeLists.txt  LICENSE  README.md  SECURITY.md
.cache/clangd/index/: ArmaturePopulate.cpp.ECE28CE5EFA460CA.idx  ArmaturePopulate.h.EE98E83A1220C276.idx  AssertHandler.cpp.B7A6744A984E6876.idx  AssertHandler.h.EDEBD8E5F4ABF6B1.idx  Assimp.cpp.B91E09A863BED63C.idx  Base64.cpp.00B3481B1147547D.idx  Base64.hpp.570F064570BA4178.idx  BaseImporter.cpp.857E54C0F73F71CC.idx  BaseImporter.h.8B2328E161B7F89E.idx  BaseProcess.cpp.06C5B6590E15F99F.idx  BaseProcess.h.443DD1DAE1EB0DA6.idx  Bitmap.cpp.366CE4873670669F.idx  Bitmap.h.589F66680D676358.idx  ByteSwapper.h.39FD0810D35627DB.idx  CInterfaceIOWrapper.cpp.89F3DAE5D7455D6E.idx  CInterfaceIOWrapper.h.17888F7643BF7006.idx  CalcTangentsProcess.cpp.E2269D6830999F50.idx  CalcTangentsProcess.h.333DEA902795B0B6.idx  Compression.cpp.40560C505A635B68.idx  Compression.h.8F00BB1EDAE1FC54.idx  ComputeUVMappingProcess.cpp.10A4AD34362C1CB9.idx  ComputeUVMappingProcess.h.D329AB1679F03485.idx  ConvertToLHProcess.cpp.502EAB3257D1D046.idx  ConvertToLHProcess.h.144F7DFCC0D91531.idx  CreateAnimMesh.cpp.B756798F522485D9.idx  CreateAnimMesh.h.245E65B73B5CC929.idx  DDLNode.cpp.80DBC07E274677F3.idx  DDLNode.h.DB8B77D5E15C9425.idx  DeboneProcess.cpp.DFD258BC2F2A2942.idx  DeboneProcess.h.C424484CAD1B78CD.idx  DefaultIOStream.cpp.3F684BDA92E9CA1D.idx  DefaultIOStream.h.6BD82EE1D9943116.idx  DefaultIOSystem.cpp.016478EE994DFE8E.idx  DefaultIOSystem.h.95C888C117622CF8.idx  DefaultLogger.cpp.EBAE68B7DDC5BB40.idx  DefaultLogger.hpp.0542D49D0CFE9EA9.idx  DefaultProgressHandler.h.1E19A7AAEC17C02F.idx  DropFaceNormalsProcess.cpp.5C33B8D0F5A1FFE2.idx  DropFaceNormalsProcess.h.2B028878790FBC6F.idx  EmbedTexturesProcess.cpp.8A69098321FA89E3.idx  (+613 more)
.github/ISSUE_TEMPLATE/: bug_report.md
editor/: CMakeLists.txt  main.cpp
engine/: CMakeLists.txt
engine/core/: component.h  entity.h  layer.h  layer_stack.cpp  layer_stack.h  level.h  level_manager.h  time.h
engine/core/asset/: asset_manager.h
engine/core/components/: editor_camera.h  model_renderer.h
engine/core/event/events/: char.h  keyboard.h  mouse_button.h
engine/core/input/: input.h
engine/core/log/: log.cpp
engine/layers/: engine_layer.h
engine/platform/: terminal.cpp
engine/renderer/: draw_test_cube.cpp  draw_test_cube.h  mesh.h  renderer.h  shader.h  texture.h
engine/renderer/ui/: user_interface.cpp
ressources/: imgui.ini
ressources/models/: cube.fbx
ressources/shaders/: color_frag.glsl  color_vert.glsl  default_frag.glsl  error.frag  tex.frag  vertex_shader.glsl
sandbox/: CMakeLists.txt
src/: CMakeLists.txt  main.cpp
src/core/: application.cpp  application.h  component.h  entity.cpp  entity.h  level.cpp  level.h  level_manager.cpp  time.cpp
src/core/asset/: asset.cpp  asset.h  asset_manager.cpp  asset_manager.h
src/core/components/: camera.cpp  camera.h  editor_camera.cpp  editor_camera.h  model_renderer.cpp  model_renderer.h  transform.cpp  transform.h
src/core/event/: event.h  event_dispatcher.h
src/core/event/events/: cursor_position.h  file_drop.h  mouse_button.h  window.h
src/core/input/: input.cpp  input.h
src/core/log/: log.h
src/layers/: engine_layer.cpp  engine_layer.h
src/platform/: platform.h  terminal.h  window.cpp  window.h
src/renderer/: frame_buffer.cpp  frame_buffer.h  mesh.cpp  mesh.h  model.cpp  model.h  renderer.cpp  renderer.h  shader.cpp  shader.h  texture.cpp  texture.h
src/renderer/ui/: user_interface.h
